Minor spacing adjustment & bug fix
- Increased top padding on the clock text.
- Fixed a bug that could result in an invalid background image being set.

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     color: white;
     padding: 0;
     padding-left: 1vw;
-    padding-top: 86.5vh;
+    padding-top: 87vh;
     margin: 0;
     border: 0;
     user-select: none;
